[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/forest/demo-transition-areas/demo-area-3/forest_demo_transition_p3.gd" type="Script" id=1]
[ext_resource path="res://scenes/forest/assets/forest_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/forest/demo-transition-areas/DetectionArea2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/temp_folder_harmful_block/HarmfulBlock.tscn" type="PackedScene" id=4]

[node name="ForestDemoThree" type="Node2D"]
position = Vector2( 13, 55 )
script = ExtResource( 1 )

[node name="TileMap_background" type="TileMap" parent="."]
scale = Vector2( 1.5, 1.5 )
tile_set = ExtResource( 2 )
format = 1

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -2024, -94 )
scale = Vector2( 1.5, 1.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -589755, 0, 0, -589754, 0, 0, -589753, 0, 0, -524221, 0, 0, -524220, 0, 0, -524219, 0, 0, -524218, 0, 0, -524217, 0, 0, -524216, 0, 0, -524215, 0, 0, -458703, 13, 0, -458702, 13, 0, -458701, 13, 0, -458700, 13, 0, -458699, 13, 0, -458698, 13, 0, -458697, 13, 0, -458696, 13, 0, -458695, 13, 0, -458694, 13, 0, -458693, 3, 0, -458692, 0, 0, -458691, 0, 0, -458690, 0, 0, -458689, 0, 0, -458688, 0, 0, -458687, 0, 0, -458686, 0, 0, -458685, 0, 0, -458684, 0, 0, -458683, 0, 0, -458682, 0, 0, -458681, 0, 0, -458680, 0, 0, -458679, 0, 0, -393168, 13, 0, -393167, 13, 0, -393166, 13, 0, -393165, 13, 0, -393164, 13, 0, -393163, 13, 0, -393162, 13, 0, -393161, 13, 0, -393160, 13, 0, -393159, 13, 0, -393158, 13, 0, -393157, 13, 0, -393156, 0, 0, -393155, 0, 0, -393154, 0, 0, -393153, 0, 0, -393152, 0, 0, -393151, 0, 0, -393150, 0, 0, -393149, 0, 0, -393148, 0, 0, -393147, 0, 0, -393146, 0, 0, -393145, 0, 0, -393144, 0, 0, -393143, 0, 0, -327633, 13, 0, -327632, 13, 0, -327631, 13, 0, -327624, 13, 0, -327623, 13, 0, -327622, 13, 0, -327621, 13, 0, -327620, 0, 0, -327619, 0, 0, -327618, 0, 0, -327617, 0, 0, -327616, 0, 0, -327615, 0, 0, -327614, 0, 0, -327613, 0, 0, -327612, 0, 0, -327611, 0, 0, -327610, 0, 0, -327609, 0, 0, -327608, 0, 0, -327607, 0, 0, -262109, 25, 0, -262108, 25, 0, -262107, 25, 0, -262106, 25, 0, -262105, 25, 0, -262104, 25, 0, -262103, 25, 0, -262102, 25, 0, -262101, 25, 0, -262100, 25, 0, -262099, 25, 0, -262098, 25, 0, -262097, 25, 0, -262096, 25, 0, -262095, 13, 0, -262086, 13, 0, -262085, 13, 0, -262084, 0, 0, -262083, 0, 0, -262082, 0, 0, -262081, 0, 0, -262080, 0, 0, -262079, 0, 0, -262078, 0, 0, -262077, 0, 0, -262076, 0, 0, -262075, 0, 0, -262074, 0, 0, -262073, 0, 0, -262072, 0, 0, -262071, 0, 0, -196573, 25, 0, -196572, 25, 0, -196571, 25, 0, -196570, 25, 0, -196569, 25, 0, -196568, 25, 0, -196567, 25, 0, -196566, 25, 0, -196565, 25, 0, -196564, 25, 0, -196563, 25, 0, -196562, 25, 0, -196561, 25, 0, -196560, 25, 0, -196550, 13, 0, -196549, 13, 0, -196548, 0, 0, -196547, 0, 0, -196546, 0, 0, -196545, 0, 0, -196544, 0, 0, -196543, 0, 0, -196542, 0, 0, -196541, 0, 0, -196540, 0, 0, -196539, 0, 0, -196538, 0, 0, -196537, 0, 0, -196536, 0, 0, -196535, 0, 0, -131014, 13, 0, -131013, 13, 0, -131012, 0, 0, -131011, 0, 0, -131010, 0, 0, -131009, 0, 0, -131008, 0, 0, -131007, 0, 0, -131006, 0, 0, -131005, 0, 0, -131004, 0, 0, -131003, 0, 0, -131002, 0, 0, -131001, 0, 0, -131000, 0, 0, -130999, 0, 0, -65478, 13, 0, -65477, 13, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, -65471, 0, 0, -65470, 0, 0, -65469, 0, 0, -65468, 0, 0, -65467, 0, 0, -65466, 0, 0, -65465, 0, 0, -65464, 0, 0, -65463, 0, 0, 58, 13, 0, 59, 13, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 64, 0, 0, 65, 0, 0, 66, 0, 0, 67, 0, 0, 68, 0, 0, 69, 0, 0, 70, 0, 0, 71, 0, 0, 72, 0, 0, 73, 0, 0, 65591, 13, 0, 65592, 13, 0, 65593, 13, 0, 65594, 13, 0, 65595, 13, 0, 65596, 0, 0, 65597, 0, 0, 65598, 0, 0, 65599, 0, 0, 65600, 0, 0, 65601, 0, 0, 65602, 0, 0, 65603, 0, 0, 65604, 0, 0, 65605, 0, 0, 65606, 0, 0, 65607, 0, 0, 65608, 0, 0, 65609, 0, 0, 131107, 18, 0, 131108, 18, 0, 131109, 18, 0, 131110, 18, 0, 131111, 18, 0, 131112, 18, 0, 131113, 18, 0, 131114, 18, 0, 131115, 18, 0, 131116, 18, 0, 131117, 18, 0, 131118, 18, 0, 131119, 18, 0, 131120, 18, 0, 131125, 13, 0, 131126, 13, 0, 131127, 13, 0, 131128, 13, 0, 131129, 13, 0, 131130, 13, 0, 131131, 21, 0, 131132, 0, 0, 131133, 0, 0, 131134, 0, 0, 131135, 0, 0, 131136, 0, 0, 131137, 0, 0, 131138, 0, 0, 131139, 0, 0, 131140, 0, 0, 131141, 0, 0, 131142, 0, 0, 131143, 0, 0, 131144, 0, 0, 131145, 0, 0, 196665, 21, 0, 196666, 21, 0, 196667, 21, 0, 196668, 0, 0, 196669, 0, 0, 196670, 0, 0, 196671, 0, 0, 196672, 0, 0, 196673, 0, 0, 196674, 0, 0, 196675, 0, 0, 196676, 0, 0, 196677, 0, 0, 196678, 0, 0, 196679, 0, 0, 196680, 0, 0, 196681, 0, 0, 262200, 21, 0, 262201, 21, 0, 262202, 21, 0, 262203, 0, 0, 262204, 0, 0, 262205, 0, 0, 262206, 0, 0, 262207, 0, 0, 262208, 0, 0, 262209, 0, 0, 262210, 0, 0, 262211, 0, 0, 262212, 0, 0, 262213, 0, 0, 262214, 0, 0, 262215, 0, 0, 262216, 0, 0, 262217, 0, 0, 327715, 18, 0, 327716, 18, 0, 327717, 18, 0, 327718, 18, 0, 327719, 18, 0, 327720, 18, 0, 327721, 18, 0, 327722, 18, 0, 327723, 18, 0, 327724, 18, 0, 327725, 18, 0, 327726, 18, 0, 327727, 18, 0, 327728, 18, 0, 327729, 18, 0, 327730, 18, 0, 327731, 18, 0, 327732, 18, 0, 327733, 18, 0, 327734, 18, 0, 327735, 18, 0, 327736, 18, 0, 327737, 21, 0, 327738, 21, 0, 327739, 0, 0, 327740, 0, 0, 327741, 0, 0, 327742, 0, 0, 327743, 0, 0, 327744, 0, 0, 327745, 0, 0, 327746, 0, 0, 327747, 0, 0, 327748, 0, 0, 327749, 0, 0, 327750, 0, 0, 327751, 0, 0, 327752, 0, 0, 327753, 0, 0, 393251, 18, 0, 393252, 18, 0, 393253, 18, 0, 393254, 18, 0, 393255, 18, 0, 393256, 18, 0, 393257, 18, 0, 393258, 18, 0, 393259, 18, 0, 393260, 18, 0, 393261, 18, 0, 393262, 18, 0, 393263, 18, 0, 393264, 18, 0, 393265, 18, 0, 393266, 18, 0, 393267, 18, 0, 393268, 18, 0, 393269, 18, 0, 393270, 18, 0, 393271, 18, 0, 393272, 18, 0, 393273, 18, 0, 393274, 18, 0, 393275, 0, 0, 393276, 0, 0, 393277, 0, 0, 393278, 0, 0, 393279, 0, 0, 393280, 0, 0, 393281, 0, 0, 393282, 0, 0, 393283, 0, 0, 393284, 0, 0, 393285, 0, 0, 393286, 0, 0, 393287, 0, 0, 393288, 0, 0, 393289, 0, 0, 458787, 18, 0, 458788, 18, 0, 458789, 18, 0, 458790, 18, 0, 458791, 18, 0, 458792, 18, 0, 458793, 18, 0, 458794, 18, 0, 458795, 18, 0, 458796, 18, 0, 458797, 18, 0, 458798, 18, 0, 458799, 18, 0, 458800, 18, 0, 458801, 18, 0, 458802, 18, 0, 458803, 18, 0, 458804, 18, 0, 458805, 18, 0, 458806, 18, 0, 458807, 18, 0, 458808, 18, 0, 458809, 18, 0, 458810, 21, 0, 458811, 0, 0, 458812, 0, 0, 458813, 0, 0, 458814, 0, 0, 458815, 0, 0, 458816, 0, 0, 458817, 0, 0, 458818, 0, 0, 458819, 0, 0, 458820, 0, 0, 458821, 0, 0, 458822, 0, 0, 458823, 0, 0, 458824, 0, 0, 458825, 0, 0, 524323, 18, 0, 524324, 18, 0, 524325, 18, 0, 524326, 18, 0, 524327, 18, 0, 524328, 18, 0, 524329, 18, 0, 524330, 18, 0, 524331, 18, 0, 524332, 18, 0, 524333, 18, 0, 524334, 18, 0, 524335, 18, 0, 524336, 18, 0, 524337, 18, 0, 524338, 18, 0, 524339, 18, 0, 524340, 18, 0, 524341, 18, 0, 524342, 18, 0, 524343, 18, 0, 524344, 18, 0, 524345, 18, 0, 524346, 21, 0, 524347, 0, 0, 524348, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 524352, 0, 0, 524353, 0, 0, 524354, 0, 0, 524355, 0, 0, 524356, 0, 0, 524357, 0, 0, 524358, 0, 0, 524359, 0, 0, 524360, 0, 0, 524361, 0, 0, 589859, 18, 0, 589860, 18, 0, 589861, 18, 0, 589862, 18, 0, 589863, 18, 0, 589864, 18, 0, 589865, 18, 0, 589866, 18, 0, 589867, 18, 0, 589868, 18, 0, 589869, 18, 0, 589870, 18, 0, 589871, 18, 0, 589872, 18, 0, 589873, 18, 0, 589874, 18, 0, 589875, 18, 0, 589876, 18, 0, 589877, 18, 0, 589878, 18, 0, 589879, 18, 0, 589880, 18, 0, 589881, 18, 0, 589882, 21, 0, 589883, 0, 0, 589884, 0, 0, 589885, 0, 0, 589886, 0, 0, 589887, 0, 0, 589888, 0, 0, 589889, 0, 0, 589890, 0, 0, 589891, 0, 0, 589892, 0, 0, 589893, 0, 0, 589894, 0, 0, 589895, 0, 0, 589896, 0, 0, 589897, 0, 0, 655395, 18, 0, 655396, 18, 0, 655397, 18, 0, 655398, 18, 0, 655399, 18, 0, 655400, 18, 0, 655401, 18, 0, 655402, 18, 0, 655403, 18, 0, 655404, 18, 0, 655405, 18, 0, 655406, 18, 0, 655407, 18, 0, 655408, 18, 0, 655409, 18, 0, 655410, 18, 0, 655411, 18, 0, 655412, 18, 0, 655413, 18, 0, 655414, 18, 0, 655415, 18, 0, 655416, 18, 0, 655417, 18, 0, 655418, 18, 0, 655419, 18, 0, 655420, 0, 0, 655421, 0, 0, 655422, 0, 0, 655423, 0, 0, 655424, 0, 0, 655425, 0, 0, 655426, 0, 0, 655427, 0, 0, 655428, 0, 0, 655429, 0, 0, 655430, 0, 0, 655431, 0, 0, 655432, 0, 0 )

[node name="SceneChangeMarkers" type="Node2D" parent="."]

[node name="TopLeftSceneChangePosMarker" type="Position2D" parent="SceneChangeMarkers"]
position = Vector2( -122, -38 )
__meta__ = {
"_edit_group_": true
}

[node name="TopLeftDetectionArea2D" parent="SceneChangeMarkers/TopLeftSceneChangePosMarker" instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )

[node name="BottomLeftSceneChangePosMarker" type="Position2D" parent="SceneChangeMarkers"]
position = Vector2( -124, 102 )
__meta__ = {
"_edit_group_": true
}

[node name="BottomLeftDetectionArea2D" parent="SceneChangeMarkers/BottomLeftSceneChangePosMarker" instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )

[node name="SpawnMarkers" type="Node2D" parent="."]

[node name="TopLeftSpawn" type="Position2D" parent="SpawnMarkers"]
position = Vector2( -11, -36 )

[node name="BottomLeftSpawn" type="Position2D" parent="SpawnMarkers"]
position = Vector2( -14, 105 )

[node name="DefaultSpawn" type="Position2D" parent="."]
position = Vector2( 539, -83 )

[node name="HarmfulBlock" parent="." instance=ExtResource( 4 )]
position = Vector2( 706, -118 )

[connection signal="body_entered" from="SceneChangeMarkers/TopLeftSceneChangePosMarker/TopLeftDetectionArea2D" to="." method="_on_TopLeftDetectionArea2D_body_entered"]
[connection signal="body_entered" from="SceneChangeMarkers/BottomLeftSceneChangePosMarker/BottomLeftDetectionArea2D" to="." method="_on_BottomLeftDetectionArea2D_body_entered"]
